# STCFGTestAux

./: .gitignore  CMakeLists.txt
include/: Cipher.h  IO.h
src/: Cipher.c  IO.c  main.c
